--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<h1>Welcome to {{title}}!</h1>
-<router-outlet />
+<!-- src/app/app.component.html -->
+<app-navbar></app-navbar>  <!-- Add Navbar here -->
+
