Commiting Drawer Navigation Bar

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -11,7 +11,7 @@
 
       <!-- Centered logo -->
       <div class="logo-container">
-        <img src="../../../assets/images/logo.png" alt="Logo" class="logo">
+        <img class="logo">
       </div>
 
       <!-- "Event Planner" text -->
