--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -7,7 +7,7 @@
       <mat-icon class="burger-icon">menu</mat-icon>
 
       <!-- Right profile icon -->
-      <mat-icon class="profile-icon">account_circle</mat-icon>
+        <mat-icon class="profile-icon" routerLink="/login">account_circle</mat-icon>
 
       <!-- Centered logo -->
       <div class="logo-container">
