--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -56,6 +56,10 @@ header {
   padding: 5px;          /* Add some padding to prevent clipping */
 }
 
+.profile-icon:hover {
+  color: #d9d9d9; /* Slight color change on hover */
+}
+
 /* Logo container */
 .logo-container {
   display: flex;
