--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -3,6 +3,11 @@
   box-sizing: border-box; /* Include padding and border in element's total width and height */
 }
 
+body {
+  margin: 0;
+  padding: 0;
+}
+
 .login-container {
   display: flex;
   flex-direction: row; /* Use row to align sections side-by-side */
@@ -63,9 +68,10 @@
 .content-container {
   display: flex;
   flex: 1;
-  height: calc(100vh - 50px); /* Adjust height to fit between lines */
+  height: calc(100vh - 75px); /* Adjust height to fit between lines */
   width: 100%;
   overflow: hidden; /* Prevent overflow within content container */
+  margin-top: 37.5px; /* Start the container below the second line */
 }
 
 /* Left Image Section */
@@ -144,7 +150,7 @@
   border-radius: 50%;
   opacity: 0.7;
 }
- /* Bottom green */
+/* Bottom green */
 .form-section .circle-two {
   content: '';
   position: absolute;
@@ -241,7 +247,7 @@
   background-color: #6c4c4c;
   color: white;
   border: none;
-  border-radius: 4px;
+  border-radius: 10px;
   cursor: pointer;
   font-size: 1rem;
 }
@@ -267,4 +273,37 @@ a {
 
 a:hover {
   text-decoration: underline;
+}
+
+.modal {
+  display: none; /* Default is hidden */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  background: #D9D9D9;
+  padding: 20px;
+  border-radius: 8px;
+  text-align: center;
+}
+
+.modal-content button {
+  margin: 10px;
+  padding: 10px 20px;
+  background-color: #6c4c4c;
+  color: #D9D9D9;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.modal-content button:hover {
+  background-color: #5a3e3e;
 }
