--- a/src/app/components/registration-eo/registration-eo.component.html
+++ b/src/app/components/registration-eo/registration-eo.component.html
@@ -48,7 +48,7 @@
                 <input id="address" type="text" placeholder="Address" />
               </div>
               <div class="form-group">
-                <input id="phoneNumber" type="number" placeholder="Phone number" />
+                <input id="phoneNumber" type="tel" placeholder="Phone number" (input)="onPhoneInput($event)"/>
               </div>
               <div class="form-group">
                 <input id="photo" type="file" placeholder="Photo" accept="image/*" />
