--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,21 @@
-/* app.component.css */
-h1 {
-  color: blue;
+@import url('https://fonts.googleapis.com/css2?family=Petrona:wght@400;700&display=swap');
+
+body {
+  position: relative;
+  background-color: #ffffff; /* Pozadina stranice */
+  overflow-x: hidden;
 }
+
+.section-divider1 {
+  width: 100%;
+  height: 20px;
+  background-color: #959D90; /* Zelena boja */
+  margin: 0; /* Razmak između sekcija */
+}
+.section-divider2 {
+  width: 100%;
+  height: 20px;
+  background-color: #D9D9D9; /* Zelena boja */
+  margin: 0; /* Razmak između sekcija */
+}
+
