--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
-<!-- src/app/app.component.html -->
-<app-navbar></app-navbar>  <!-- Add Navbar here -->
-
-<app-drawer-navbar></app-drawer-navbar>
+<app-navbar></app-navbar>
+<app-hottest-events></app-hottest-events>
+<app-our-events></app-our-events>
+<div class="section-divider1"></div>
+<div class="section-divider2"></div>
+<app-hottest-services></app-hottest-services>
+<app-our-sevices></app-our-sevices>
+<app-footer></app-footer>
