--- a/src/app/components/hottest-services/hottest-services.component.html
+++ b/src/app/components/hottest-services/hottest-services.component.html
@@ -27,6 +27,7 @@
           <div class="card-content">
             <h3>{{event.title}}</h3>
             <p>{{event.description}}</p>
+            <p><span  class="fas fa-tag"></span>{{event.price}}</p>
             <small>{{event.location}}</small>
             <br>
             <button class="view-more-btn">View More</button>
