--- a/src/app/components/our-sevices/our-sevices.component.css
+++ b/src/app/components/our-sevices/our-sevices.component.css
@@ -66,6 +66,11 @@
   justify-content: left;
 }
 
+.event-content small span, .event-content p span {
+  margin-right: 5px; /* Razmak između ikone i teksta */
+  color: #523D35; /* Braon boja */
+}
+
 .event-header {
   display: flex;
   padding: 16px;
@@ -207,3 +212,58 @@ button:hover {
 .filter-icon .fa-sliders-h {
   color: #5a4033;
 }
+
+.filter-options {
+  display: none; /* Po defaultu su sakriveni */
+  margin-top: 20px;
+  padding: 10px;
+  background-color: #f9f9f9;
+  border-radius: 8px;
+}
+
+.filter-options.show-filters {
+  display: block; /* Kada je aktivno, prikazuju se */
+  transition: all 0.3s ease-in-out;
+}
+
+.filter-option {
+  margin-bottom: 10px;
+}
+
+.filter-option label {
+  display: block;
+  font-size: 1rem;
+  margin-bottom: 5px;
+}
+
+.filter-option input,
+.filter-option select {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+/* Stil za price range (od-do) */
+.price-range {
+  display: flex;
+  align-items: center;
+  justify-content: center; /* Centriranje sadržaja */
+  gap: 8px;
+  width: 100%; /* Da zauzme celu širinu roditeljskog elementa */
+}
+
+.price-range input {
+  width: 80px;
+  text-align: center; /* Centriranje teksta unutar inputa */
+}
+
+.price-range span {
+  font-size: 1.2em;
+  color: #523D35; /* Braon boja */
+}
+
+.price-range .fa-dollar-sign {
+  font-size: 1.2em;
+  color: #523D35; /* Braon boja */
+}
+
