--- a/src/app/components/our-sevices/our-sevices.component.html
+++ b/src/app/components/our-sevices/our-sevices.component.html
@@ -8,8 +8,42 @@
         <input type="text" placeholder="Enter search credentials" class="search-input" [(ngModel)]="searchTerm" (input)="onSearch()" />
         <span class="fas fa-search"></span>
       </div>
-      <div class="filter-icon">
+      <div class="filter-icon" (click)="toggleFilters()">
         <span class="fas fa-sliders-h"></span>
+      </div>
+    </div>
+  </div>
+
+  <div class="filter-options" [ngClass]="{'show-filters': showFilters}">
+    <div class="filter-option">
+      <label for="startDate">Start Date:</label>
+      <input type="date" id="startDate">
+    </div>
+    <div class="filter-option">
+      <label for="endDate">End Date:</label>
+      <input type="date" id="endDate">
+    </div>
+    <div class="filter-option">
+      <label for="city">City:</label>
+      <input type="text" id="city" placeholder="Enter city">
+    </div>
+    <div class="filter-option">
+      <label for="category">Category:</label>
+      <select id="category">
+        <option value="">All Categories</option>
+        <option value="Music">Music</option>
+        <option value="Art">Art</option>
+        <option value="Sports">Sports</option>
+        <option value="Education">Education</option>
+      </select>
+    </div>
+    <div class="filter-option">
+      <label>Price Range:</label>
+      <div class="price-range">
+        <input type="number" id="minPrice" placeholder="Min Price" step="0.01">
+        <span>to</span>
+        <input type="number" id="maxPrice" placeholder="Max Price" step="0.01">
+        <span class="fas fa-dollar-sign"></span>
       </div>
     </div>
   </div>
@@ -30,6 +64,7 @@
         <h4>{{ event.title }}</h4>
         <p>{{ event.description }}</p>
         <small>{{ event.location }}</small>
+        <p><span  class="fas fa-tag"></span>{{event.price}}</p>
         <br />
         <button>View More</button>
       </div>
