--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,5 @@
+<app-navbar></app-navbar>
+<app-drawer-navbar></app-drawer-navbar>
 <app-hottest-events></app-hottest-events>
 <app-our-events></app-our-events>
 <div class="section-divider1"></div>
