--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -236,7 +236,20 @@ body {
   border-radius: 4px;
   background: #D9D9D9;
   color: #523D35; /* Set text color */
-  font-size: clamp(0.5rem, 20%, 1rem); /* Responsive text size */
+  font-size: 1.2rem;
+}
+
+
+@media (max-width: 1440px) { /* For 15-inch laptops (1440px width) */
+  .form-group input {
+    font-size: 1.1rem;
+  }
+}
+
+@media (max-width: 1366px) { /* For 13-inch laptops (1366px width) */
+  .form-group input {
+    font-size: 0.8rem;
+  }
 }
 
 .btn-confirm {
