added css to be more responsive

--- a/src/app/components/hottest-events/hottest-events.component.css
+++ b/src/app/components/hottest-events/hottest-events.component.css
@@ -49,13 +49,13 @@
   align-items: center;
   justify-content: center;
   position: relative;
-  max-width: 1300px;
+  max-width: 70%;
   margin: auto;
 }
 
 .carousel-container {
   overflow: hidden;
-  width: 100%;
+  width: 90%;
 }
 
 .carousel {
