--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -362,12 +362,21 @@ a:hover {
     font-size: 2.5rem;
   }
 
-  .form-section .circle-one,
-  .form-section .circle-two,
-  .form-section .circle-three,
+  .form-section .circle-one {
+    width: 20%;
+    height: 20%;
+  }
+  .form-section .circle-two {
+    width: 15%;
+    height: 15%;
+  }
+  .form-section .circle-tree {
+    width: 25%;
+    height: 25%;
+  }
   .form-section .circle-four {
-    width: 150px;
-    height: 150px;
+    width: 15%;
+    height: 15%;
   }
 
   .form-container h2 {
@@ -379,49 +388,121 @@ a:hover {
   }
 }
 
-/* Scaling for 16-inch laptops (1537px - 1600px) */
-@media screen and (min-width: 1537px) and (max-width: 1600px) {
-  .overlay-text h1 {
-    font-size: 3rem;
+/* Responsive Styles for Circles and Larger Screens */
+
+/* General Scaling for 13-inch laptops (1366px and smaller) */
+@media screen and (max-width: 1366px) {
+  .form-section .circle-one {
+    width: 120px;  /* Larger circle */
+    height: 120px;
   }
 
-  .form-section .circle-one,
-  .form-section .circle-two,
-  .form-section .circle-three,
+  .form-section .circle-two {
+    width: 150px;
+    height: 150px;
+  }
+
+  .form-section .circle-three {
+    width: 140px;
+    height: 140px;
+  }
+
   .form-section .circle-four {
+    width: 110px;
+    height: 110px;
+  }
+}
+
+/* Scaling for 14-inch laptops (1367px - 1440px) */
+@media screen and (min-width: 1367px) and (max-width: 1440px) {
+  .form-section .circle-one {
+    width: 160px;
+    height: 160px;
+  }
+
+  .form-section .circle-two {
+    width: 190px;
+    height: 190px;
+  }
+
+  .form-section .circle-three {
+    width: 170px;
+    height: 170px;
+  }
+
+  .form-section .circle-four {
+    width: 140px;
+    height: 140px;
+  }
+}
+
+/* Scaling for 15-inch laptops (1441px - 1536px) */
+@media screen and (min-width: 1441px) and (max-width: 1536px) {
+  .form-section .circle-one {
     width: 180px;
     height: 180px;
   }
 
-  .form-container h2 {
-    font-size: 3rem;
+  .form-section .circle-two {
+    width: 220px;
+    height: 220px;
   }
 
-  .btn-confirm {
-    font-size: 1.4rem;
+  .form-section .circle-three {
+    width: 200px;
+    height: 200px;
+  }
+
+  .form-section .circle-four {
+    width: 160px;
+    height: 160px;
+  }
+}
+
+/* Scaling for 16-inch laptops (1537px - 1600px) */
+@media screen and (min-width: 1537px) and (max-width: 1600px) {
+  .form-section .circle-one {
+    width: 220px;
+    height: 220px;
+  }
+
+  .form-section .circle-two {
+    width: 250px;
+    height: 250px;
+  }
+
+  .form-section .circle-three {
+    width: 230px;
+    height: 230px;
+  }
+
+  .form-section .circle-four {
+    width: 190px;
+    height: 190px;
   }
 }
 
 /* Scaling for Screens Larger than 1600px */
 @media screen and (min-width: 1601px) {
-  .overlay-text h1 {
-    font-size: 3.5rem;
+  .form-section .circle-one {
+    width: 260px;
+    height: 260px;
   }
 
-  .form-section .circle-one,
-  .form-section .circle-two,
-  .form-section .circle-three,
+  .form-section .circle-two {
+    width: 300px;
+    height: 300px;
+  }
+
+  .form-section .circle-three {
+    width: 280px;
+    height: 280px;
+  }
+
   .form-section .circle-four {
-    width: 200px;
-    height: 200px;
-  }
-
-  .form-container h2 {
-    font-size: 3.5rem;
-  }
-
-  .btn-confirm {
-    font-size: 1.5rem;
+    width: 240px;
+    height: 240px;
   }
 }
+
 
