--- a/src/app/components/hottest-services/hottest-services.component.css
+++ b/src/app/components/hottest-services/hottest-services.component.css
@@ -61,13 +61,13 @@
   align-items: center;
   justify-content: center;
   position: relative;
-  max-width: 1300px;
+  max-width: 90%;
   margin: auto;
 }
 
 .carousel-container {
   overflow: hidden;
-  width: 100%;
+  width: 90%;
 }
 
 .carousel {
@@ -112,8 +112,8 @@
 .card {
   flex: 0 0 auto;
   width: 100%;
-  max-width: 350px; /* Maksimalna širina */
-  height: auto;
+  max-width: 30%; /* Maksimalna širina */
+  height: 90%;
   margin: 0 8px;
   background-color: #fff;
   border-radius: 10px;
