Commiting Responsive Registration Forms

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,1 @@
-<!-- src/app/app.component.html -->
-
-<!-- Only show navbar and drawer for non-login routes -->
-<app-navbar *ngIf="!isLoginPage"></app-navbar>
-<app-drawer-navbar *ngIf="!isLoginPage"></app-drawer-navbar>
-
-<!-- Main content area (where login will show) -->
-<router-outlet></router-outlet>
+<app-registration-spp></app-registration-spp>
